<resources>
    <string name="app_name">InstagramClone</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? LogIn</string>
    <string name="register">REGISTER</string>
    <string name="log_in">Log In</string>
    <string name="new_to_instagram_register">New to Instagram? Register</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="post">POST</string>
    <string name="description">Description...</string>
</resources>